Updated current requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,34 @@
 asteval==0.9.27
-attrs==22.1.0
 brotlipy==0.7.0
 click==7.1.2
 colour==0.1.5
+contourpy==1.0.6
+cycler==0.11.0
+dpcpp-cpp-rt==2022.2.1
 et-xmlfile==1.1.0
 fonttools==4.25.0
 future==0.18.2
 hidapi==0.12.0.post2
 importlib-resources==5.9.0
+intel-cmplr-lib-rt==2022.2.1
+intel-cmplr-lic-rt==2022.2.1
+intel-opencl-rt==2022.2.1
+intel-openmp==2022.2.1
 jsonref==0.2
+jsonschema==4.17.1
+kiwisolver==1.4.4
 lmfit==1.0.3
+matplotlib==3.6.2
 microscope==0.6.0
-mistune==0.8.4
+mkl==2022.2.1
 mkl-fft==1.3.1
 mkl-service==2.4.0
 MouseInfo==0.1.3
 munkres==1.1.4
 numpy==1.22.4
+opencv-python==4.6.0.66
 openpyxl==3.0.10
+pandas==1.5.2
 Pillow==9.2.0
 PIPython==2.8.0.3
 ply==3.11
@@ -28,6 +39,7 @@ pyperclip==1.8.2
 PyQt5==5.15.4
 pyqt5-plugins==5.15.4.2.2
 PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
 pyqt5-tools==5.15.4.3.2
 PyRect==0.2.0
 Pyro4==4.82
@@ -36,12 +48,17 @@ PyScreeze==0.1.28
 pyserial==3.5
 python-dotenv==0.21.0
 pytweening==1.0.4
+pytz==2022.6
 pyusb==1.2.1
 pywin32==302
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
+scipy==1.9.3
 seaborn==0.12.1
 serpent==1.41
+tbb==2021.7.1
+tqdm==4.64.1
+typing_extensions==4.4.0
 uncertainties==3.1.7
 webencodings==0.5.1
 wincertstore==0.2
